Refactored the home, notifications, and dashboard sections to map, feed, and settings, respectively.

--- a/frontend/app/src/main/res/drawable/ic_map_black_24dp.xml
+++ b/frontend/app/src/main/res/drawable/ic_map_black_24dp.xml
@@ -1,3 +1,5 @@
+<!--TODO: update this icon to a map-->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
