--- a/frontend/app/src/main/res/drawable/ic_settings_black_24dp.xml
+++ b/frontend/app/src/main/res/drawable/ic_settings_black_24dp.xml
@@ -1,3 +1,5 @@
+<!--TODO: update icon to settings-->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
