--- a/frontend/app/src/main/res/layout/fragment_map.xml
+++ b/frontend/app/src/main/res/layout/fragment_map.xml
@@ -25,4 +25,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mapSearch" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/registerPlantFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/register_plant"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mapSearch" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
