Aesthetic improvements to plant registration flow

--- a/frontend/app/src/main/res/layout/fragment_map.xml
+++ b/frontend/app/src/main/res/layout/fragment_map.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:src="@drawable/register_plant"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mapSearch" />
 
