--- a/frontend/app/src/main/res/layout/activity_register.xml
+++ b/frontend/app/src/main/res/layout/activity_register.xml
@@ -6,24 +6,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/registerCancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:text="@string/cancel_text"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@id/plantImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/plantImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@id/registerAddImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/registerCancelButton"
+        app:layout_constraintVertical_weight="6" />
+
     <ImageButton
         android:id="@+id/registerAddImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#FFFFFF"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
+        android:adjustViewBounds="true"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:scaleType="centerInside"
         android:src="@drawable/register_add_image"
         app:layout_constraintBottom_toTopOf="@id/registerEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/plantImageView"
+        app:layout_constraintVertical_weight="2" />
 
     <android.widget.EditText
         android:id="@+id/registerEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:inputType="text"
-        android:text="@string/register_default_text"
-        android:padding="16dp"
+        android:hint="@string/register_default_text"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="24dp"
+        app:layout_constraintVertical_weight="2"
         app:layout_constraintTop_toBottomOf="@id/registerAddImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +63,10 @@
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/register_plant"
-        android:padding="16dp"
+        android:textColor="#FFFFFF"
+        android:layout_margin="24dp"
         app:layout_constraintTop_toBottomOf="@id/registerEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
