Live feed with dummy images

--- a/frontend/app/src/main/res/layout/live_feed_post.xml
+++ b/frontend/app/src/main/res/layout/live_feed_post.xml
@@ -12,9 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        >
+        android:layout_height="match_parent"
+        android:layout_marginBottom="0dp">
 
         <ImageView
             android:id="@+id/postImage"
@@ -31,8 +30,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:textSize="20dp"
             android:text="Sample Title"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/postImage" />
 
@@ -42,11 +41,23 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="12dp"
             android:paddingVertical="2dp"
+            android:layout_marginBottom="40dp"
             android:text="Sample description text"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/postTitle" />
 
+        <TextView
+            android:id="@+id/dateText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:ems="15"
+            android:paddingVertical="6dp"
+            android:textAlignment="textEnd"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/postDescription" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
