--- a/frontend/app/src/main/res/layout/activity_view_submission.xml
+++ b/frontend/app/src/main/res/layout/activity_view_submission.xml
@@ -22,16 +22,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@id/submissionBackButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/submissionPostedBy" />
 
     <TextView
         android:id="@+id/submissionPostedBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:layout_marginStart="24dp"
         app:layout_constraintTop_toBottomOf="@id/submissionPlantName"
         app:layout_constraintStart_toStartOf="parent"
