--- a/frontend/app/src/main/res/layout/activity_view_submission.xml
+++ b/frontend/app/src/main/res/layout/activity_view_submission.xml
@@ -17,6 +17,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/submissionReportButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/report_text"
+        android:textColor="#FFFFFF"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@id/submissionPlantName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/submissionPlantName"
         android:layout_width="wrap_content"
